data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4456.wast
;; 5. **Test Description:** Construct a module where `call_indirect` calls itself recursively, ensuring proper handling of the stack and return values in nested `call_indirect` calls.    - **Constraint:** Validates proper stack operations and recursion handling.    - **Improper Handling Relation:** Incorrect stack handling might lead to stack overflow or inaccurate return values.

(assert_invalid
  (module
    (type (func))
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 1)
    (func (type 0)
      (call_indirect (type 1) (i32.const 0) (local.get 0))
    )
    (func (type 1) (local i32)
      (local.get 0)
      (i32.const 1)
      (i32.add)
      (call_indirect (type 1) (local.get 0) (i32.const 0))
    )
  )
  "stack overflow or type mismatch"
)